# noise-asmjs

./: .babelrc  .eslintignore  .eslintrc  .gitignore  README.md  build.sh  package.json  release.sh
backend/: .gitignore  Cargo.toml  Rocket.toml
backend/migrations/2017-08-30-170401_create_shared_compositions/: down.sql  up.sql
backend/src/: ameotrack.rs  db_interface.rs  main.rs  models.rs  renderer.rs  routes.rs  schema.example.rs  schema.rs  util.rs
engine/: .gitignore  Cargo.toml  README.md  emscripten.sh  release_emscripten.sh  wasm.sh
engine/src/: color_schemes.rs  composed_module.rs  composition_meta.rs  interop.rs  ir.rs  library_minutiae.js  main.rs  transformations.rs  util.rs
engine/src/composition_tree/: composition.rs  conf.rs  definition.rs  initial_tree.rs  mod.rs
engine/src/tests/: mod.rs
libcomposition/: Cargo.toml
libcomposition/src/: color_schemes.rs  composition.rs  conf.rs  definition.rs  initial_tree.rs  ir.rs  lib.rs  transformations.rs  util.rs
public/: index.html
src/: Api.js  App.js  Router.js  index.css  index.js  interop.js  util.js
src/actions/: browse.js  compositionTree.js  settings.js  stage.js  submission.js
src/components/: VizHeader.js  VizSettings.js
src/components/settingGuis/: WeightedAverages.js
src/components/settings/: VizSettings.js
src/components/tree/: LeafEditor.js  NodeActionButtons.js  TreeViewer.js  index.js
src/components/visualization/: VizCanvas.js  index.js
src/data/: api.js  compositionSchemes.js  inputTransformations.js  misc.js  moduleCapabilities.js  moduleSettings.js  noiseGenerators.js  noiseModules.js
src/data/compositionTree/: initialTree.js  nodeSettingDefinitions.js  nodeTypes.js
src/helpers/: engineSettings.js
src/helpers/compositionTree/: changeListener.js  commit.js  index.js  node.js  normalization.js  serialization.js  util.js
src/reducers/: browseReducer.js  compositionTreeReducer.js  enginePointerReducer.js  index.js  maxSizeReducer.js  settings.js  stageSizeReducer.js  submissionStateReducer.js
src/routes/: BrowseSharedCompositions.js  Composition.js
src/selectors/: compositionTree.js  enginePointer.js  stageSize.js
