[package]
name = "noise-composition-backend"
version = "0.1.0"
authors = ["Casey Primozic <me@ameo.link>"]
description = "Backend for my noise function composition web application.  Used to serve the function sharing funcitonality."

[dependencies]
chrono = "0.4"
diesel = { version = "0.16.0", features=["mysql", "chrono"] }
diesel_codegen = { version = "0.16.0", features=["mysql"] }
dotenv = "0.9.0"
r2d2 = "0.7.3"
r2d2-diesel = "0.16.0"
rocket = { git = "https://github.com/SergioBenitez/Rocket.git" }
rocket_codegen = { git = "https://github.com/SergioBenitez/Rocket.git" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket.git" }
serde = "1.*"
serde_derive = "1.*"
serde_json = "1.*"
